# mlops_project

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  Pipfile  README.md  main.py  prefect.yaml  pyproject.toml
.prefect/: flows.json
deployment/: lambda.py  lambda_function.py  predict.py  test.py  utils.py
notebooks/: temp.ipynb
src/: dataloader.py  model.py  register_model.py  train.py  utils.py  workflow.py
tests/integration/: check.sh  docker-compose.yaml  test.py
tests/unit/: test.py
