[metadata]
name = "MLOps-zoomcamp final project"
version = "1.0.0"
description = "Sentiment analysis project"
author = "Ilnaz Salimov"
author_email = "salimovilnaz777@gmail.com"
license = "MIT"

[tool.pylint.messages_control]
max-line-length=120
disable = [
    "missing-function-docstring",
    "missing-final-newline",
    "missing-class-docstring",
    "missing-module-docstring",
    "invalid-name",
    "too-few-public-methods",
    "duplicate-code",
    "no-name-in-module",
    "ungrouped-imports",
    "no-member",
    "broad-exception-raised",
    "use-dict-literal",
    "unspecified-encoding"
]

[tool.black]
line-length = 120
target-version = ['py310']
skip-string-normalization = true
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
)/
'''

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true
length_sort = true
